# ScamScanner

./: .gitignore  README.md  backend.dockerfile  docker-compose.yml  downloaded_sites.db  frontend.dockerfile  old_downloaded_sites.db  pytest.ini  scamscan.db
frontend/: App.tsx  bun.lockb  constants.ts  index.css  index.html  index.tsx  metadata.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
frontend/components/: AnalysisResult.tsx  AuditResultDisplay.tsx  Card.tsx  DomainInfoCard.tsx  ErrorBoundary.tsx  FindingCard.tsx  Footer.tsx  Header.tsx  HowItWorks.tsx  Icons.tsx  LoadingDisplay.tsx  ManualInput.tsx  Navbar.tsx  Page.tsx  RiskBadge.tsx  RiskScoreGauge.tsx  Spinner.tsx  SupportButton.tsx  UrlInput.tsx  WSProgressLog.tsx
frontend/docs/: feature_parity.csv  feature_parity.md
frontend/hooks/: useAnalysis.ts
frontend/services/: apiService.ts  geminiService.ts  websiteAnalyzer.ts  websiteFetcher.ts
ignoreme/: workflow.md
scamscan/: app.py  pyproject.toml
scamscan/api/: endpoints.py
scamscan/models/: analysis.py
scamscan/services/: db.py  website_fetcher.py  workflows.py
scamscanner/: app.py  config.py  exceptions.py  main.py  pyproject.toml  requirements.txt
scamscanner-ui/: bun.lockb  components.json  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
scamscanner-ui/test-results/: .last-run.json
scamscanner/api/: endpoints.py
scamscanner/models/: analysis.py  constants.py  exceptions.py  schemas.py  url.py
scamscanner/services/: analyzer.py  db.py  (+8 more)
(+72 files in other folders)
